# Practice-Cplusplus

2018-ACM-SIGMOD-Contest/1-quickstep/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Harness.cpp  Main.cpp  Makefile  ProjectConfig.h  ProjectConfig.h.in  README  cmake_install.cmake  compile.sh  empty_src.cpp  generate_cmakelists.py  lint_everything.py  package.sh  reconfigure  run.sh
2018-ACM-SIGMOD-Contest/1-quickstep/operators/: AggregateOperator.cpp  AggregateOperator.hpp  CMakeLists.txt  CTestTestfile.cmake  ChainedJoinAggregateOperator.cpp  ChainedJoinAggregateOperator.hpp  CreateTableViewOperator.cpp  CreateTableViewOperator.hpp  DropTableOperator.hpp  GeneralEquiJoinOperator.cpp  GeneralEquiJoinOperator.hpp  HashJoinOperator.cpp  HashJoinOperator.hpp  IndexJoinAggregateOperator.cpp  IndexJoinAggregateOperator.hpp  IndexJoinOperator.cpp  IndexJoinOperator.hpp  Makefile  MultiwayJoinAggregateOperator.cpp  MultiwayJoinAggregateOperator.hpp  OperatorTypedefs.hpp  PrintOperator.cpp  PrintOperator.hpp  RelationalOperator.hpp  ScanJoinAggregateOperator.cpp  ScanJoinAggregateOperator.hpp  SelectOperator.cpp  SelectOperator.hpp  SortMergeJoinOperator.cpp  SortMergeJoinOperator.hpp  cmake_install.cmake
2018-ACM-SIGMOD-Contest/1-quickstep/operators/aggregators/: AggregationIsSorted.hpp  AggregationMinMax.hpp  BuildExistenceMap.hpp  BuildForeignKeyIndex.hpp  BuildKeyCountVector.cpp  BuildKeyCountVector.hpp  BuildPrimaryKeyIndex.hpp  BuildRangedPartitions.cpp  BuildRangedPartitions.hpp  CMakeLists.txt  CTestTestfile.cmake  CompressColumn.hpp  Makefile  cmake_install.cmake
2018-ACM-SIGMOD-Contest/1-quickstep/operators/expressions/: CMakeLists.txt  CTestTestfile.cmake  Comparison.cpp  Comparison.hpp  ComparisonType.hpp  Conjunction.cpp  Conjunction.hpp  ExpressionSynthesizer.hpp  Makefile  Predicate.hpp  Scalar.hpp  ScalarAttribute.cpp  ScalarAttribute.hpp  ScalarLiteral.hpp  TruePredicate.cpp  TruePredicate.hpp  cmake_install.cmake
2018-ACM-SIGMOD-Contest/1-quickstep/operators/specializations/: CMakeLists.txt  CTestTestfile.cmake  KeyCountVectorAccumulator00.cpp  KeyCountVectorAccumulator00.hpp  KeyCountVectorAccumulator01.cpp  KeyCountVectorAccumulator01.hpp  KeyCountVectorAccumulator02.cpp  KeyCountVectorAccumulator02.hpp  KeyCountVectorAccumulator03.cpp  KeyCountVectorAccumulator03.hpp  KeyCountVectorAccumulatorCommon.hpp  Makefile  cmake_install.cmake
2018-ACM-SIGMOD-Contest/1-quickstep/operators/tests/: CMakeLists.txt  CTestTestfile.cmake  Comparison_test.cpp  Makefile  cmake_install.cmake
2018-ACM-SIGMOD-Contest/1-quickstep/operators/utility/: CMakeLists.txt  CTestTestfile.cmake  ForeignKeySlotAccessor.hpp  KeyCountVector.hpp  KeyCountVectorAccumulator.cpp  KeyCountVectorAccumulator.hpp  KeyCountVectorChain.hpp  (+3 more)
2018-ACM-SIGMOD-Contest/1-quickstep/optimizer/: Aggregate.cpp  Aggregate.hpp  AggregateFunction.cpp  AggregateFunction.hpp  Alias.cpp  Alias.hpp  AttributeReference.cpp  AttributeReference.hpp  CMakeLists.txt  CTestTestfile.cmake  ChainedJoinAggregate.cpp  ChainedJoinAggregate.hpp  Comparison.cpp  Comparison.hpp  Conjunction.cpp  Conjunction.hpp  EquiJoin.cpp  EquiJoin.hpp  EquiJoinAggregate.cpp  EquiJoinAggregate.hpp  ExecutionGenerator.cpp  ExecutionGenerator.hpp  ExecutionPlan.cpp  ExecutionPlan.hpp  ExprId.hpp  Expression.hpp  ExpressionUtil.cpp  ExpressionUtil.hpp  Filter.cpp  Filter.hpp  Makefile  MultiwayCartesianJoin.cpp  MultiwayCartesianJoin.hpp  MultiwayEquiJoinAggregate.cpp  MultiwayEquiJoinAggregate.hpp  Optimizer.cpp  Optimizer.hpp  OptimizerContext.hpp  OptimizerTree.hpp  PatternMatcher.hpp  (+19 more)
2018-ACM-SIGMOD-Contest/1-quickstep/partition/: CMakeLists.txt  CTestTestfile.cmake  Makefile  PartitionBlockAllocator.hpp  PartitionChain.hpp  PartitionDestination.hpp  PartitionDestinationBase.hpp  PartitionExecutor.hpp  PartitionGroup.hpp  RangeSegmentation.hpp  cmake_install.cmake
2018-ACM-SIGMOD-Contest/1-quickstep/scheduler/: CMakeLists.txt  CTestTestfile.cmake  Makefile  Node.hpp  Scheduler.cpp  Scheduler.hpp  SchedulerFlags.cpp  SchedulerFlags.hpp  SchedulerInterface.hpp  SchedulerMessage.hpp  SchedulerTypedefs.hpp  Task.hpp  TaskDescription.hpp  TaskName.hpp  TaskStatistics.cpp  TaskStatistics.hpp  Worker.cpp  Worker.hpp  WorkerMessage.hpp  cmake_install.cmake
2018-ACM-SIGMOD-Contest/1-quickstep/storage/: Attribute.hpp  AttributeStatistics.hpp  CMakeLists.txt  CTestTestfile.cmake  ColumnAccessor.hpp  ColumnStoreBlock.hpp  ColumnVector.hpp  Database.hpp  ExistenceMap.hpp  ForeignKeyIndex.hpp  GenericAccessor.hpp  IndexManager.hpp  Makefile  PrimaryKeyIndex.hpp  Relation.cpp  Relation.hpp  RelationStatistics.hpp  RowStoreBlock.hpp  StorageBlock.hpp  StorageTypedefs.hpp  TupleIdSequence.hpp  cmake_install.cmake
2018-ACM-SIGMOD-Contest/1-quickstep/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  PartitionTest.cpp  RangeTest.cpp  SchedulerTest.cpp  cmake_install.cmake
2018-ACM-SIGMOD-Contest/1-quickstep/threading/: CTestTestfile.cmake  Makefile  ThreadUtil.hpp  cmake_install.cmake
2018-ACM-SIGMOD-Contest/1-quickstep/types/: CMakeLists.txt  CTestTestfile.cmake  Makefile  Type.cpp  Type.hpp  cmake_install.cmake
2018-ACM-SIGMOD-Contest/1-quickstep/utility/: BitManipulation.hpp  BitVector.hpp  CMakeLists.txt  CTestTestfile.cmake  ConcurrentBitVector.hpp  DisjointSetForest.hpp  ExecutionDAGVisualizer.cpp  ExecutionDAGVisualizer.hpp  HashFilter.hpp  HashPair.hpp  HashTable.hpp  Makefile  MemoryUtil.hpp  MultiwayParallelMergeSort.hpp  NumberUtil.hpp  NumericGenerator.hpp  PlanVisualizer.cpp  PlanVisualizer.hpp  Range.hpp  RowStoreBlockSorter.cpp  RowStoreBlockSorter.hpp  ScopedArray.hpp  ScopedBuffer.hpp  StringUtil.hpp  ThreadSafePool.hpp  ThreadSafeQueue.hpp  TreeStringSerializable.hpp  cmake_install.cmake
2018-ACM-SIGMOD-Contest/1-quickstep/workload/: CMakeLists.txt  CTestTestfile.cmake  Makefile  TableAnalyzer.cpp  TableAnalyzer.hpp  Workload.cpp  Workload.hpp  cmake_install.cmake
2018-ACM-SIGMOD-Contest/5-flomige/: CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake  compile.sh  compile_commands.json  run.sh
(+193 files in other folders)
